# python_learning_assistant_cli

./: .gitignore  CLAUDE.md  LICENSE  UV_GUIDE.md  build_pyfuze.py  demo_sessions.py  manual_build.py  pyfuze.json  pyproject.toml  python-learning-assistant-standalone.py  run.py  setup.bat  setup.py  setup.sh  start-standalone.bat  test.py  test_sessions.py  test_sessions_standalone.py  test_time_manager.py
docs/: INSTALL.md  SESSION_REPORT.md  TIME_MANAGEMENT_REPORT.md
python-learning-assistant-portable/: README.md  install_deps.bat  requirements.txt  start.bat  使用说明.txt
python-learning-assistant-portable/config/: api_keys.json  config.json
python-learning-assistant-portable/docs/: CONFIG.md  USAGE.md
python-learning-assistant-portable/examples/: advanced_examples.py  basic_examples.py
python-learning-assistant-portable/sessions/: enhanced_test_session.json  python_learning_session_20250713_125714.json  python_learning_session_20250713_140033.json  python_learning_session_20250713_140940.json  python_learning_session_20250713_142629.json  python_learning_session_20250713_154426.json  python_learning_session_20250713_175236.json  python_learning_session_20250716_020928.json  sample_learning_session.json
python-learning-assistant-portable/src/: main.py
src/: api_key_manager.py  time_manager.py
