[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-learning-assistant"
version = "1.0.0"
description = "一个功能丰富的Python学习终端应用"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Python学习助手开发团队"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "openai>=1.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/your-username/python-learning-assistant"
"Bug Reports" = "https://github.com/your-username/python-learning-assistant/issues"
"Source" = "https://github.com/your-username/python-learning-assistant"

[project.scripts]
python-learning-assistant = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = "src"
"config" = "config"
"docs" = "docs"
"examples" = "examples"
